--- a/app/src/main/res/layout/menu_navigation_view.xml
+++ b/app/src/main/res/layout/menu_navigation_view.xml
@@ -5,9 +5,59 @@
     android:layout_width="wrap_content"
     android:layout_height="match_parent"
     android:layout_gravity="start"
-    android:background="@color/colorWhite"
+    android:background="@color/colorPrimary"
     app:headerLayout="@layout/menu_header_layout"
-    app:menu="@menu/menu_navigation_drawer"
+    android:layout_alignParentBottom="true"
     android:fitsSystemWindows="false">
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:layout_marginTop="@dimen/nav_header_height">
+        <ExpandableListView
+            android:id="@+id/expandableListView"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:visibility="visible"
+            android:background="@android:color/white"
+            android:dividerHeight="0dp"
+            android:divider="@color/colorPrimaryDark"
+            android:groupIndicator="@null" />
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:id="@+id/lyt_group_header"
+            android:layout_marginTop="20dp"
+            android:layout_marginBottom="50dp"
+            android:layout_height="?attr/listPreferredItemHeightSmall"
+            android:orientation="horizontal">
+
+            <ImageView
+                android:layout_width="25dp"
+                android:layout_height="25dp"
+                android:id="@+id/icon_nav"
+                android:layout_marginLeft="15dp"
+                android:layout_gravity="center"
+                android:src="@drawable/clothes"/>
+
+            <TextView
+                android:id="@+id/lblListHeader"
+                android:layout_width="wrap_content"
+                android:text="Nairjara Silks"
+                android:onClick="onNairajaSilksClick"
+                android:layout_height="?attr/listPreferredItemHeightSmall"
+                android:gravity="center_vertical"
+                android:layout_marginRight="30dp"
+                android:paddingLeft="20dp"
+                android:textStyle="bold"
+                android:paddingRight="?attr/listPreferredItemPaddingRight"
+                android:textColor="#fff"
+                android:textSize="16sp" />
+
+
+
+        </LinearLayout>
+    </LinearLayout>
 
 </android.support.design.widget.NavigationView>
